Order analysis have been added in the feature/Order

--- a/bike-store-sales.ipynb
+++ b/bike-store-sales.ipynb
@@ -624,13 +624,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's the meanof Order_Quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.901659648253654"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Order_Quantity\"].mean()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sales"
-   ]
+   "source": []
   }
  ],
  "metadata": {
