Monthly questionaire is added

--- a/bike-store-sales.ipynb
+++ b/bike-store-sales.ipynb
@@ -684,6 +684,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How many sales per month do we have?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "June         11234\n",
+       "December     11200\n",
+       "May          11128\n",
+       "April        10182\n",
+       "March         9674\n",
+       "January       9284\n",
+       "February      9022\n",
+       "October       8750\n",
+       "November      8734\n",
+       "August        8200\n",
+       "September     8166\n",
+       "July          7462\n",
+       "Name: Month, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Month\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
