--- a/bike-store-sales.ipynb
+++ b/bike-store-sales.ipynb
@@ -723,6 +723,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a list of every product sold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Hitch Rack - 4-Bike', 'All-Purpose Bike Stand',\n",
+       "       'Mountain Bottle Cage', 'Water Bottle - 30 oz.',\n",
+       "       'Road Bottle Cage', 'AWC Logo Cap', 'Bike Wash - Dissolver',\n",
+       "       'Fender Set - Mountain', 'Half-Finger Gloves, L',\n",
+       "       'Half-Finger Gloves, M', 'Half-Finger Gloves, S',\n",
+       "       'Sport-100 Helmet, Black', 'Sport-100 Helmet, Red',\n",
+       "       'Sport-100 Helmet, Blue', 'Hydration Pack - 70 oz.',\n",
+       "       'Short-Sleeve Classic Jersey, XL',\n",
+       "       'Short-Sleeve Classic Jersey, L', 'Short-Sleeve Classic Jersey, M',\n",
+       "       'Short-Sleeve Classic Jersey, S', 'Long-Sleeve Logo Jersey, M',\n",
+       "       'Long-Sleeve Logo Jersey, XL', 'Long-Sleeve Logo Jersey, L',\n",
+       "       'Long-Sleeve Logo Jersey, S', 'Mountain-100 Silver, 38',\n",
+       "       'Mountain-100 Silver, 44', 'Mountain-100 Black, 48',\n",
+       "       'Mountain-100 Silver, 48', 'Mountain-100 Black, 38',\n",
+       "       'Mountain-200 Silver, 38', 'Mountain-100 Black, 44',\n",
+       "       'Mountain-100 Silver, 42', 'Mountain-200 Black, 46',\n",
+       "       'Mountain-200 Silver, 42', 'Mountain-200 Silver, 46',\n",
+       "       'Mountain-200 Black, 38', 'Mountain-100 Black, 42',\n",
+       "       'Mountain-200 Black, 42', 'Mountain-400-W Silver, 46',\n",
+       "       'Mountain-500 Silver, 40', 'Mountain-500 Silver, 44',\n",
+       "       'Mountain-500 Black, 48', 'Mountain-500 Black, 40',\n",
+       "       'Mountain-400-W Silver, 42', 'Mountain-500 Silver, 52',\n",
+       "       'Mountain-500 Black, 52', 'Mountain-500 Silver, 42',\n",
+       "       'Mountain-500 Black, 44', 'Mountain-500 Silver, 48',\n",
+       "       'Mountain-400-W Silver, 38', 'Mountain-400-W Silver, 40',\n",
+       "       'Mountain-500 Black, 42', 'Road-150 Red, 48', 'Road-150 Red, 62',\n",
+       "       'Road-750 Black, 48', 'Road-750 Black, 58', 'Road-750 Black, 52',\n",
+       "       'Road-150 Red, 52', 'Road-150 Red, 44', 'Road-150 Red, 56',\n",
+       "       'Road-750 Black, 44', 'Road-350-W Yellow, 40',\n",
+       "       'Road-350-W Yellow, 42', 'Road-250 Black, 44',\n",
+       "       'Road-250 Black, 48', 'Road-350-W Yellow, 48',\n",
+       "       'Road-550-W Yellow, 44', 'Road-550-W Yellow, 38',\n",
+       "       'Road-250 Black, 52', 'Road-550-W Yellow, 48', 'Road-250 Red, 58',\n",
+       "       'Road-250 Black, 58', 'Road-250 Red, 52', 'Road-250 Red, 48',\n",
+       "       'Road-250 Red, 44', 'Road-550-W Yellow, 42',\n",
+       "       'Road-550-W Yellow, 40', 'Road-650 Red, 48', 'Road-650 Red, 60',\n",
+       "       'Road-650 Black, 48', 'Road-350-W Yellow, 44', 'Road-650 Red, 52',\n",
+       "       'Road-650 Black, 44', 'Road-650 Red, 62', 'Road-650 Red, 58',\n",
+       "       'Road-650 Black, 60', 'Road-650 Black, 58', 'Road-650 Black, 52',\n",
+       "       'Road-650 Black, 62', 'Road-650 Red, 44',\n",
+       "       \"Women's Mountain Shorts, M\", \"Women's Mountain Shorts, S\",\n",
+       "       \"Women's Mountain Shorts, L\", 'Racing Socks, L', 'Racing Socks, M',\n",
+       "       'Mountain Tire Tube', 'Touring Tire Tube', 'Patch Kit/8 Patches',\n",
+       "       'HL Mountain Tire', 'LL Mountain Tire', 'Road Tire Tube',\n",
+       "       'LL Road Tire', 'Touring Tire', 'ML Mountain Tire', 'HL Road Tire',\n",
+       "       'ML Road Tire', 'Touring-1000 Yellow, 50', 'Touring-1000 Blue, 46',\n",
+       "       'Touring-1000 Yellow, 60', 'Touring-1000 Blue, 50',\n",
+       "       'Touring-3000 Yellow, 50', 'Touring-3000 Blue, 54',\n",
+       "       'Touring-3000 Blue, 58', 'Touring-3000 Yellow, 44',\n",
+       "       'Touring-3000 Yellow, 54', 'Touring-3000 Blue, 62',\n",
+       "       'Touring-3000 Blue, 44', 'Touring-1000 Blue, 54',\n",
+       "       'Touring-1000 Yellow, 46', 'Touring-1000 Blue, 60',\n",
+       "       'Touring-3000 Yellow, 62', 'Touring-1000 Yellow, 54',\n",
+       "       'Touring-2000 Blue, 54', 'Touring-3000 Blue, 50',\n",
+       "       'Touring-3000 Yellow, 58', 'Touring-2000 Blue, 46',\n",
+       "       'Touring-2000 Blue, 50', 'Touring-2000 Blue, 60',\n",
+       "       'Classic Vest, L', 'Classic Vest, M', 'Classic Vest, S'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Product\"].unique()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
