--- a/bike-store-sales.ipynb
+++ b/bike-store-sales.ipynb
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "Name: Month, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -797,13 +797,81 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sales[\"Product\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales[\"Calculated_Date\"] = sales[[\"Day\",\"Month\",\"Year\"]].apply(lambda x: '{}-{}-{}'.format(x[0],x[1],x[2]),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    26-November-2013\n",
+       "1    26-November-2015\n",
+       "2       23-March-2014\n",
+       "3       23-March-2016\n",
+       "4         15-May-2014\n",
+       "Name: Calculated_Date, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Calculated_Date\"].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales[\"Calculated_Date\"] = pd.to_datetime(sales[\"Calculated_Date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2013-11-26\n",
+       "1   2015-11-26\n",
+       "2   2014-03-23\n",
+       "3   2016-03-23\n",
+       "4   2014-05-15\n",
+       "Name: Calculated_Date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Calculated_Date\"].head()"
    ]
   },
   {
