sales analysis question added

--- a/bike-store-sales.ipynb
+++ b/bike-store-sales.ipynb
@@ -875,10 +875,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Increase 50 US dollars revenue to every sale\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "sales[\"Revenue\"] += 50\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How many orders were mad in Canada or France?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25176"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.loc[(sales[\"Country\"] == \"Canada\") | (sales[\"Country\"] == 'France')].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How many Bik Rack orders were mad from Canad?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.loc[(sales[\"Country\"]==\"Canada\") & (sales[\"Sub_Category\"] == \"Bike Racks\")].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How many orders were mad in each region of France"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seine (Paris)        2328\n",
+       "Seine Saint Denis    1684\n",
+       "Nord                 1670\n",
+       "Hauts de Seine       1084\n",
+       "Essonne               994\n",
+       "Yveline               954\n",
+       "Seine et Marne        394\n",
+       "Moselle               386\n",
+       "Loiret                382\n",
+       "Val d'Oise            264\n",
+       "Garonne (Haute)       208\n",
+       "Val de Marne          158\n",
+       "Charente-Maritime     148\n",
+       "Somme                 134\n",
+       "Loir et Cher          120\n",
+       "Pas de Calais          90\n",
+       "Name: State, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "france_states = sales.loc[sales[\"Country\"]==\"France\",'State'].value_counts()\n",
+    "\n",
+    "france_states"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How many sales were made per category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Accessories    70120\n",
+       "Bikes          25982\n",
+       "Clothing       16934\n",
+       "Name: Product_Category, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Product_Category\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
