--- a/bike-store-sales.ipynb
+++ b/bike-store-sales.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "25176"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "104"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "Name: State, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
        "Name: Product_Category, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,6 +1022,534 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# How many orders were mad per accessory sub-categories?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tires and Tubes      33870\n",
+       "Bottles and Cages    15876\n",
+       "Helmets              12158\n",
+       "Fenders               4032\n",
+       "Cleaners              1802\n",
+       "Hydration Packs       1334\n",
+       "Bike Racks             592\n",
+       "Bike Stands            456\n",
+       "Name: Sub_Category, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accessories = sales.loc[sales[\"Product_Category\"]==\"Accessories\",'Sub_Category'].value_counts()\n",
+    "\n",
+    "accessories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How many order were made per bike sub-categories?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Road Bikes        13430\n",
+       "Mountain Bikes     8854\n",
+       "Touring Bikes      3698\n",
+       "Name: Sub_Category, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes = sales.loc[sales[\"Product_Category\"]==\"Bikes\",'Sub_Category'].value_counts()\n",
+    "\n",
+    "bikes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Which gender has the most amount of sales?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "M    58312\n",
+       "F    54724\n",
+       "Name: Customer_Gender, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"Customer_Gender\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Howmany sales with more than 500 in Revenue were made by men?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.loc[(sales[\"Customer_Gender\"]=='M') & (sales[\"Revenue\"] == 500)].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the top-5 sales with the highest revenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Customer_Age</th>\n",
+       "      <th>Age_Group</th>\n",
+       "      <th>Customer_Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Product_Category</th>\n",
+       "      <th>Sub_Category</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Order_Quantity</th>\n",
+       "      <th>Unit_Cost</th>\n",
+       "      <th>Unit_Price</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Calculated_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>112073</th>\n",
+       "      <td>2015-07-24</td>\n",
+       "      <td>24</td>\n",
+       "      <td>July</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Adults (35-64)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Queensland</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>Vests</td>\n",
+       "      <td>Touring-1000 Yellow, 50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>2384</td>\n",
+       "      <td>15096</td>\n",
+       "      <td>42978</td>\n",
+       "      <td>58124</td>\n",
+       "      <td>2015-07-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112072</th>\n",
+       "      <td>2013-07-24</td>\n",
+       "      <td>24</td>\n",
+       "      <td>July</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Adults (35-64)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Queensland</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>Vests</td>\n",
+       "      <td>Touring-1000 Yellow, 50</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>2384</td>\n",
+       "      <td>14055</td>\n",
+       "      <td>40014</td>\n",
+       "      <td>54119</td>\n",
+       "      <td>2013-07-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71129</th>\n",
+       "      <td>2011-07-08</td>\n",
+       "      <td>8</td>\n",
+       "      <td>July</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Youth (&lt;25)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>Bikes</td>\n",
+       "      <td>Road Bikes</td>\n",
+       "      <td>Road-150 Red, 48</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2171</td>\n",
+       "      <td>3578</td>\n",
+       "      <td>5628</td>\n",
+       "      <td>8684</td>\n",
+       "      <td>14362</td>\n",
+       "      <td>2011-07-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70307</th>\n",
+       "      <td>2011-04-30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Adults (35-64)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Bikes</td>\n",
+       "      <td>Road Bikes</td>\n",
+       "      <td>Road-150 Red, 62</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2171</td>\n",
+       "      <td>3578</td>\n",
+       "      <td>5485</td>\n",
+       "      <td>8684</td>\n",
+       "      <td>14219</td>\n",
+       "      <td>2011-04-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70601</th>\n",
+       "      <td>2011-09-30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>September</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Youth (&lt;25)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>Bikes</td>\n",
+       "      <td>Road Bikes</td>\n",
+       "      <td>Road-150 Red, 62</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2171</td>\n",
+       "      <td>3578</td>\n",
+       "      <td>5485</td>\n",
+       "      <td>8684</td>\n",
+       "      <td>14219</td>\n",
+       "      <td>2011-09-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date  Day      Month  Year  Customer_Age       Age_Group  \\\n",
+       "112073 2015-07-24   24       July  2015            52  Adults (35-64)   \n",
+       "112072 2013-07-24   24       July  2013            52  Adults (35-64)   \n",
+       "71129  2011-07-08    8       July  2011            22     Youth (<25)   \n",
+       "70307  2011-04-30   30      April  2011            44  Adults (35-64)   \n",
+       "70601  2011-09-30   30  September  2011            19     Youth (<25)   \n",
+       "\n",
+       "       Customer_Gender    Country             State Product_Category  \\\n",
+       "112073               M  Australia        Queensland         Clothing   \n",
+       "112072               M  Australia        Queensland         Clothing   \n",
+       "71129                M     Canada           Alberta            Bikes   \n",
+       "70307                M     Canada  British Columbia            Bikes   \n",
+       "70601                F     Canada  British Columbia            Bikes   \n",
+       "\n",
+       "       Sub_Category                  Product  Order_Quantity  Unit_Cost  \\\n",
+       "112073        Vests  Touring-1000 Yellow, 50              29       1482   \n",
+       "112072        Vests  Touring-1000 Yellow, 50              27       1482   \n",
+       "71129    Road Bikes         Road-150 Red, 48               4       2171   \n",
+       "70307    Road Bikes         Road-150 Red, 62               4       2171   \n",
+       "70601    Road Bikes         Road-150 Red, 62               4       2171   \n",
+       "\n",
+       "        Unit_Price  Profit   Cost  Revenue Calculated_Date  \n",
+       "112073        2384   15096  42978    58124      2015-07-24  \n",
+       "112072        2384   14055  40014    54119      2013-07-24  \n",
+       "71129         3578    5628   8684    14362      2011-07-08  \n",
+       "70307         3578    5485   8684    14219      2011-04-30  \n",
+       "70601         3578    5485   8684    14219      2011-09-30  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.sort_values(['Revenue'],ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the sale with the highest revenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Customer_Age</th>\n",
+       "      <th>Age_Group</th>\n",
+       "      <th>Customer_Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Product_Category</th>\n",
+       "      <th>Sub_Category</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Order_Quantity</th>\n",
+       "      <th>Unit_Cost</th>\n",
+       "      <th>Unit_Price</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Calculated_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>112073</th>\n",
+       "      <td>2015-07-24</td>\n",
+       "      <td>24</td>\n",
+       "      <td>July</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Adults (35-64)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Queensland</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>Vests</td>\n",
+       "      <td>Touring-1000 Yellow, 50</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>2384</td>\n",
+       "      <td>15096</td>\n",
+       "      <td>42978</td>\n",
+       "      <td>58124</td>\n",
+       "      <td>2015-07-24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date  Day Month  Year  Customer_Age       Age_Group  \\\n",
+       "112073 2015-07-24   24  July  2015            52  Adults (35-64)   \n",
+       "\n",
+       "       Customer_Gender    Country       State Product_Category Sub_Category  \\\n",
+       "112073               M  Australia  Queensland         Clothing        Vests   \n",
+       "\n",
+       "                        Product  Order_Quantity  Unit_Cost  Unit_Price  \\\n",
+       "112073  Touring-1000 Yellow, 50              29       1482        2384   \n",
+       "\n",
+       "        Profit   Cost  Revenue Calculated_Date  \n",
+       "112073   15096  42978    58124      2015-07-24  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond = sales[\"Revenue\"] == sales[\"Revenue\"].max()\n",
+    "sales[cond]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is the mean Order_Quantity of order with more than 10K in revenue?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.689265536723164"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter= sales[\"Revenue\"] > 10000\n",
+    "\n",
+    "sales.loc[filter,'Order_Quantity'].mean(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is the mean Order_Quanty of orders with less than 10K in revenue?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.914539380997528"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter= sales[\"Revenue\"] < 10000\n",
+    "\n",
+    "sales.loc[filter,'Order_Quantity'].mean(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How may order were made between May and July of 2016?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "isin() takes 2 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-1ebc23cdad38>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfilter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msales\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Year\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m2016\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msales\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Month'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'May'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'June'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'July'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msales\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: isin() takes 2 positional arguments but 4 were given"
+     ]
+    }
+   ],
+   "source": [
+    "filter = (sales[\"Year\"]==2016) & (sales['Month'].isin('May','June','July'))\n",
+    "\n",
+    "sales.loc[filter].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
